--- a/styles.css
+++ b/styles.css
@@ -112,15 +112,14 @@ h1  {
 }
 
 .author{
-	position: center;
-	width: 100px;
-	height: 23px;
-	left: 305px;
-	top: 321px;
+	text-align: center;
+	width: auto;
+	height: 25px;
 	background: #FFFFFF;
 	border: 1px solid #000000;
 	box-sizing: border-box;
 	border-radius: 5px;
+	padding: 10px;
 }
 
 /* COMMON STYLES
