--- a/styles.css
+++ b/styles.css
@@ -1,215 +1,294 @@
 @font-face {
-	font-family: 'Computer Modern Serif';
-	src: url('cmunrm.eot');
-	src: url('cmunrm.eot?#iefix') format('embedded-opentype'),
-		 url('cmunrm.woff') format('woff'),
-		 url('cmunrm.ttf') format('truetype'),
-		 url('cmunrm.svg#cmunrm') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: "Computer Modern Serif";
+  src: url("cmunrm.eot");
+  src: url("cmunrm.eot?#iefix") format("embedded-opentype"),
+    url("cmunrm.woff") format("woff"), url("cmunrm.ttf") format("truetype"),
+    url("cmunrm.svg#cmunrm") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
-
 
 @font-face {
-	font-family: 'Computer Modern Serif';
-	src: url('cmunbx.eot');
-	src: url('cmunbx.eot?#iefix') format('embedded-opentype'),
-		 url('cmunbx.woff') format('woff'),
-		 url('cmunbx.ttf') format('truetype'),
-		 url('cmunbx.svg#cmunbx') format('svg');
-	font-weight: bold;
-	font-style: normal;
+  font-family: "Computer Modern Serif";
+  src: url("cmunbx.eot");
+  src: url("cmunbx.eot?#iefix") format("embedded-opentype"),
+    url("cmunbx.woff") format("woff"), url("cmunbx.ttf") format("truetype"),
+    url("cmunbx.svg#cmunbx") format("svg");
+  font-weight: bold;
+  font-style: normal;
 }
-
 
 @font-face {
-	font-family: 'Computer Modern Serif';
-	src: url('cmunti.eot');
-	src: url('cmunti.eot?#iefix') format('embedded-opentype'),
-		 url('cmunti.woff') format('woff'),
-		 url('cmunti.ttf') format('truetype'),
-		 url('cmunti.svg#cmunti') format('svg');
-	font-weight: normal;
-	font-style: italic;
+  font-family: "Computer Modern Serif";
+  src: url("cmunti.eot");
+  src: url("cmunti.eot?#iefix") format("embedded-opentype"),
+    url("cmunti.woff") format("woff"), url("cmunti.ttf") format("truetype"),
+    url("cmunti.svg#cmunti") format("svg");
+  font-weight: normal;
+  font-style: italic;
 }
-
 
 @font-face {
-	font-family: 'Computer Modern Serif';
-	src: url('cmunbi.eot');
-	src: url('cmunbi.eot?#iefix') format('embedded-opentype'),
-		 url('cmunbi.woff') format('woff'),
-		 url('cmunbi.ttf') format('truetype'),
-		 url('cmunbi.svg#cmunbi') format('svg');
-	font-weight: bold;
-	font-style: italic;
+  font-family: "Computer Modern Serif";
+  src: url("cmunbi.eot");
+  src: url("cmunbi.eot?#iefix") format("embedded-opentype"),
+    url("cmunbi.woff") format("woff"), url("cmunbi.ttf") format("truetype"),
+    url("cmunbi.svg#cmunbi") format("svg");
+  font-weight: bold;
+  font-style: italic;
 }
 
-
-html  {
-    background-image: radial-gradient(70.92% 156.77% at 99.2% 1.51%, rgba(250, 255, 0, 0.72) 9.92%, rgba(255, 255, 255, 0.72) 100%);
-    background-repeat: no-repeat;
-    height: 100%;
-  }
-
-body  {
-    font-family: "Computer Modern Serif", serif;
+body {
+  background-image: radial-gradient(
+    70.92% 156.77% at 99.2% 1.51%,
+    rgba(250, 255, 0, 0.72) 9.92%,
+    rgba(255, 255, 255, 0.72) 100%
+  );
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  font-family: "Computer Modern Serif", serif;
+  height: 100%;
 }
 
-h1  {
-    font-size: 36px;
-    font-weight: normal;
-    line-height: 38px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+/* RESETS HERE
+	-------------------------------- */
+p {
+  font-size: 16px;
+  line-height: 1.5em;
+  margin: 0;
 }
 
-.site-header  {
-    max-width: 260px;
-    margin-top: 60px;
-    margin-left: 60px;
-  }
-
-.header_top_half{
-    padding-bottom: 0px;
-    border-bottom-style: solid;
-    border-bottom: 1px solid black
+/* UTILITY
+	-------------------------------- */
+.section__wrapper {
+  margin: 0 auto;
+  max-width: 1230px;
+  padding: 0 25px;
 }
 
-.header_bottom_half{
+h1,
+h2,
+.headingstyle {
+  /* relying on semantic HTML over logical typographic system here */
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 1.1em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+/* HEADER
+	-------------------------------- */
+.site__header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 80px;
+  margin-top: 60px;
+}
+
+.site__header__text h1 {
+  border-bottom-style: solid;
+  border-bottom: 1px solid black;
+  max-width: 260px;
+  padding-bottom: 10px;
+}
+
+.site__header__text p {
   font-size: 18px;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
   line-height: 24px;
-  margin-top: 10px;
   margin-bottom: 10px;
+  max-width: 260px;
 }
 
-.content{
-  margin-top: 60px;
-  margin-left: 60px;
+.site__header__logo img {
+  height: auto;
+  width: 160px;
 }
 
-.entry{
+/* BODY SECTION
+	-------------------------------- */
+.entry {
+  display: flex;
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
-.top_entry{
-	display: flex;
-	flex: 0 0 200px;
+.entry__number {
+  flex-basis: 45px;
 }
 
-.number{
-
+.entry__text h2 {
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  white-space: wrap;
 }
 
-.title{
+.entry__text .author,
+.entry__text .author__mobile {
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 6px;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1;
+  margin-left: 15px;
+  padding: 4px 8px;
 }
 
-.description{
+.entry__text .author__mobile {
+  display: none;
+  margin-left: 0;
 }
 
-.author{
-	text-align: center;
-	width: auto;
-	height: 25px;
-	background: #FFFFFF;
-	border: 1px solid #000000;
-	box-sizing: border-box;
-	border-radius: 5px;
-	padding: 10px;
+.entry__text p {
+  max-width: 260px;
 }
 
-/* COMMON STYLES
+/* FOOTER
+	-------------------------------- */
+.site__footer {
+  padding-bottom: 80px;
+}
+
+.site__footer p {
+  margin-bottom: 40px;
+}
+
+/* MOBILE STYLES
   -------------------------------- */
+/* Smaller than Desktop: */
+@media screen and (max-width: 1025px) {
+}
+/* Smaller than Laptop: */
+@media screen and (max-width: 770px) {
+  .entry__text h2 {
+    display: block;
+  }
+  .entry__text .author {
+    display: none;
+  }
+  .entry__text .author__mobile {
+    display: inline-block;
+    margin-top: 15px;
+  }
+  .site__header__logo img {
+    width: 120px;
+  }
+}
+/* Smaller than Tablet: */
+@media screen and (max-width: 480px) {
+}
+/* LAYOUT */
+/* {position:absolute;} */
+/* {position:relative;} */
+/* {float:left;} */
+/* {float:right;} */
+/* {overflow:hidden;} */
+/* {display:block;} */
+/* {display:inline;} */
+/* {display:none;} */
+/* {margin:0} */
+/* {padding:0;} */
+/* {width:100%;} */
 
-	/* LAYOUT */
-		/* {position:absolute;} */
-		/* {position:relative;} */
-		/* {float:left;} */
-		/* {float:right;} */
-		/* {overflow:hidden;} */
-		/* {display:block;} */
-		/* {display:inline;} */
-		/* {display:none;} */
-		/* {margin:0} */
-		/* {padding:0;} */
-		/* {width:100%;} */
+/* TYPOGRAPHY */
+/* {line-height:1;} */
+/* {list-style-type:none;} */
+/* {font-size:1em;} */
+/* {font-style:italic;} */
+/* {font-style:normal;} */
+/* {font-weight:bold;} */
+/* {font-weight:normal;} */
+/* {text-align:center;} */
+/* {text-align:right;} */
+/* {text-align:left;} */
+/* {text-decoration:underline;} */
+/* {text-decoration:none;} */
+/* {text-transform:uppercase;} */
+/* {text-transform:none;} */
 
-	/* TYPOGRAPHY */
-		/* {line-height:1;} */
-		/* {list-style-type:none;} */
-		/* {font-size:1em;} */
-		/* {font-style:italic;} */
-		/* {font-style:normal;} */
-		/* {font-weight:bold;} */
-		/* {font-weight:normal;} */
-		/* {text-align:center;} */
-		/* {text-align:right;} */
-		/* {text-align:left;} */
-		/* {text-decoration:underline;} */
-		/* {text-decoration:none;} */
-		/* {text-transform:uppercase;} */
-		/* {text-transform:none;} */
-
-	/* COLOR */
-		/* {background-color: #fff;} */
-		/* {background-color: transparent;} */
-		/* {border: 1px solid #000;} */
-		/* {border: none;} */
-		/* {color: #000;} */
-		/* {border-radius: 0px;} */
-		/* {transition: all 0.3s ease-in-out;} */
-
+/* COLOR */
+/* {background-color: #fff;} */
+/* {background-color: transparent;} */
+/* {border: 1px solid #000;} */
+/* {border: none;} */
+/* {color: #000;} */
+/* {border-radius: 0px;} */
+/* {transition: all 0.3s ease-in-out;} */
 
 /* BASE
 	-------------------------------- */
-	body{}
-	::selection, ::moz-selection{}
-
-
+body {
+}
+::selection,
+::moz-selection {
+}
 
 /* HEADER
 	-------------------------------- */
 
-
-/* FOOTER
-	-------------------------------- */
-	.site-footer{}
-
-
 /* CONTENT
 	-------------------------------- */
-	.site-content{}
+.site-content {
+}
 
-	/* LAYOUT */
+/* LAYOUT */
 
-	/* BASIC ELEMENTS */
-		div{}
-		p{}
-		blockquote{}
-		code{}
-		img{}
-		a{}
-		em{}
-		strong{}
-		pre{}
+/* BASIC ELEMENTS */
+div {
+}
+p {
+}
+blockquote {
+}
+code {
+}
+img {
+}
+a {
+}
+em {
+}
+strong {
+}
+pre {
+}
 
-	/* HEADINGS */
-		h1{}
-		h2{}
-		h3{}
-		h4{}
-		h5{}
-		h6{}
+/* HEADINGS */
+h1 {
+}
+h2 {
+}
+h3 {
+}
+h4 {
+}
+h5 {
+}
+h6 {
+}
 
-	/* FORMS & BUTTONS */
-		form{}
-		fieldset{}
-		legend{}
-		label{}
-		input{}
-		textarea{}
-		select{}
+/* FORMS & BUTTONS */
+form {
+}
+fieldset {
+}
+legend {
+}
+label {
+}
+input {
+}
+textarea {
+}
+select {
+}
