--- a/styles.css
+++ b/styles.css
@@ -39,15 +39,14 @@
 }
 
 body {
-  background-image: radial-gradient(
-    70.92% 156.77% at 99.2% 1.51%,
-    rgba(250, 255, 0, 0.72) 9.92%,
-    rgba(255, 255, 255, 0.72) 100%
-  );
-  background-repeat: no-repeat;
+  background-image: radial-gradient(93.42% 168.16% at 104.62% -5.14%, #FBFF35 0%, #FFFFFF 100%);
   box-sizing: border-box;
   font-family: "Computer Modern Serif", serif;
   height: 100%;
+	margin-bottom: 0;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+
 }
 
 /* RESETS HERE
@@ -70,7 +69,7 @@ h1,
 h2,
 .headingstyle {
   /* relying on semantic HTML over logical typographic system here */
-  font-size: 36px;
+  font-size: 30px;
   font-weight: normal;
   line-height: 1.1em;
   margin-top: 10px;
@@ -80,32 +79,38 @@ h2,
 a {
   color: #000;
   text-decoration: none;
+
 }
+
+a:hover {
+	text-decoration: underline;
+}
+
 
 /* HEADER
 	-------------------------------- */
 .site__header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 80px;
-  margin-top: 60px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .site__header__text h1 {
   border-bottom-style: solid;
   border-bottom: 1px solid black;
-  max-width: 260px;
+  max-width: 230px;
   padding-bottom: 10px;
 }
 
 .site__header__text p {
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 10px;
-  max-width: 260px;
+  max-width: 240px;
 }
 
 .site__header__logo img {
@@ -113,16 +118,30 @@ a {
   width: 160px;
 }
 
+	/* SPINNING FOR LATER
+	-webkit-animation:spin 8s linear infinite;
+    -moz-animation:spin 8s linear infinite;
+    animation:spin 8s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
+
+
+
+
 /* BODY SECTION
 	-------------------------------- */
 .entry {
   display: flex;
-  margin-top: 50px;
-  margin-bottom: 70px;
+  margin-top: 0px;
+  margin-bottom: 20px;
 }
 
 .entry__number {
   flex-basis: 45px;
+	line-height: .8em;
 }
 
 .entry__text h2 {
@@ -132,8 +151,13 @@ a {
   white-space: wrap;
 }
 
+.about__text {
+	width: 600px;
+}
+
 .entry__text .author,
 .entry__text .author__mobile {
+	vertical-align: text-bottom;
   background-color: #fff;
   border: 1px solid #000;
   border-radius: 6px;
@@ -142,6 +166,7 @@ a {
   line-height: 1;
   margin-left: 15px;
   padding: 4px 8px;
+	margin-bottom: 4px;
 }
 
 .entry__text .author__mobile {
@@ -151,16 +176,21 @@ a {
 
 .entry__text p {
   max-width: 260px;
+	font-size: 14px;
 }
 
 /* FOOTER
 	-------------------------------- */
 .site__footer {
-  padding-bottom: 80px;
+	display: flex
+  padding-bottom: 20px;
+	margin-top: 40px;
 }
 
 .site__footer p {
+	flex-basis: 45px;
   margin-bottom: 40px;
+	font-size: 24px;
 }
 
 /* MOBILE STYLES
@@ -170,6 +200,8 @@ a {
 }
 /* Smaller than Laptop: */
 @media screen and (max-width: 770px) {
+
+
   .entry__text h2 {
     display: block;
   }
@@ -186,6 +218,12 @@ a {
 }
 /* Smaller than Tablet: */
 @media screen and (max-width: 480px) {
+
+	.site__header__logo img {
+	  display: none;
+	}
+
+
 }
 /* LAYOUT */
 /* {position:absolute;} */
@@ -267,10 +305,13 @@ pre {
 h1 {
 }
 h2 {
+	font-size: 24px;
 }
 h3 {
+	font-size: 18px;
 }
 h4 {
+	font-size: 24px;
 }
 h5 {
 }
